Implement support to InvenioRDM API

--- a/examples/basics.ipynb
+++ b/examples/basics.ipynb
@@ -13,6 +13,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "import http.client as http_client\n",
+    "http_client.HTTPConnection.debuglevel = 1\n",
+    "\n",
+    "# You must initialize logging, otherwise you'll not see debug output.\n",
+    "logging.basicConfig()\n",
+    "logging.getLogger().setLevel(logging.DEBUG)\n",
+    "requests_log = logging.getLogger(\"requests.packages.urllib3\")\n",
+    "requests_log.setLevel(logging.DEBUG)\n",
+    "requests_log.propagate = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=zen.list_drafts('r2Jg4oxa4sZQB9ikjzzp9a80Pg5dsdnIQQB1C18qM67OPaQEGKzR1quYlTi6', \n",
+    "                base_url=zen.Zenodo.sandbox_url,\n",
+    "                headers=dict(accept='application/json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'created': '2024-02-29T10:30:29.010400+00:00',\n",
+       " 'modified': '2024-02-29T10:30:29.234012+00:00',\n",
+       " 'id': 31944,\n",
+       " 'conceptrecid': '31943',\n",
+       " 'metadata': {'access_right': 'open',\n",
+       "  'relations': {'version': [{'index': 0,\n",
+       "     'is_last': False,\n",
+       "     'parent': {'pid_type': 'recid', 'pid_value': '31943'}}]}},\n",
+       " 'title': '',\n",
+       " 'links': {'self': 'https://sandbox.zenodo.org/api/records/31944',\n",
+       "  'self_html': 'https://sandbox.zenodo.org/records/31944',\n",
+       "  'parent': 'https://sandbox.zenodo.org/api/records/31943',\n",
+       "  'parent_html': 'https://sandbox.zenodo.org/records/31943',\n",
+       "  'parent_doi': 'https://sandbox.zenodo.org/doi/',\n",
+       "  'self_iiif_manifest': 'https://sandbox.zenodo.org/api/iiif/record:31944/manifest',\n",
+       "  'self_iiif_sequence': 'https://sandbox.zenodo.org/api/iiif/record:31944/sequence/default',\n",
+       "  'files': 'https://sandbox.zenodo.org/api/records/31944/files',\n",
+       "  'media_files': 'https://sandbox.zenodo.org/api/records/31944/media-files',\n",
+       "  'archive': 'https://sandbox.zenodo.org/api/records/31944/files-archive',\n",
+       "  'archive_media': 'https://sandbox.zenodo.org/api/records/31944/media-files-archive',\n",
+       "  'latest': 'https://sandbox.zenodo.org/api/records/31944/versions/latest',\n",
+       "  'latest_html': 'https://sandbox.zenodo.org/records/31944/latest',\n",
+       "  'draft': 'https://sandbox.zenodo.org/api/records/31944/draft',\n",
+       "  'versions': 'https://sandbox.zenodo.org/api/records/31944/versions',\n",
+       "  'access_links': 'https://sandbox.zenodo.org/api/records/31944/access/links',\n",
+       "  'access_users': 'https://sandbox.zenodo.org/api/records/31944/access/users',\n",
+       "  'access_request': 'https://sandbox.zenodo.org/api/records/31944/access/request',\n",
+       "  'access': 'https://sandbox.zenodo.org/api/records/31944/access',\n",
+       "  'reserve_doi': 'https://sandbox.zenodo.org/api/records/31944/draft/pids/doi',\n",
+       "  'communities': 'https://sandbox.zenodo.org/api/records/31944/communities',\n",
+       "  'communities-suggestions': 'https://sandbox.zenodo.org/api/records/31944/communities-suggestions',\n",
+       "  'requests': 'https://sandbox.zenodo.org/api/records/31944/requests'},\n",
+       " 'updated': '2024-02-29T10:30:29.234012+00:00',\n",
+       " 'recid': '31944',\n",
+       " 'revision': 4,\n",
+       " 'files': [],\n",
+       " 'owners': [{'id': 29}],\n",
+       " 'status': 'published',\n",
+       " 'stats': {'downloads': 0,\n",
+       "  'unique_downloads': 0,\n",
+       "  'views': 0,\n",
+       "  'unique_views': 0,\n",
+       "  'version_downloads': 0,\n",
+       "  'version_unique_downloads': 0,\n",
+       "  'version_unique_views': 0,\n",
+       "  'version_views': 0},\n",
+       " 'state': 'unsubmitted',\n",
+       " 'submitted': False}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x['hits']['hits'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
